--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-leptos = { version = "0.5.0", features = ["csr"] }
-leptos_meta = { version = "0.5.0", features = ["csr"] }
+leptos = { version = "0.5.1", features = ["csr"] }
+leptos_meta = { version = "0.5.1", features = ["csr"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 serde-wasm-bindgen = "0.5"
 wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
 wasm-bindgen-futures = "0.4"
 js-sys = "0.3"
+tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys" , features = ["tauri","event","dialog","path"]}
 
 [workspace]
 members = ["src-tauri"]
