--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,11 +11,13 @@ edition = "2021"
 
 [build-dependencies]
 tauri-build = { version = "1.5", features = [] }
+syntect = "5.1.0"
 
 [dependencies]
 tauri = { version = "1.5", features = [ "api-all"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+syntect = "5.1.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
