--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ tauri = { version = "1.5", features = [ "api-all"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 syntect = "5.1.0"
+similar = "^2.3"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
