--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 syntect = "5.1.0"
 similar = "^2.3"
+global-hotkey = "0.4.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
