--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ serde_json = "1.0"
 syntect = "5.1.0"
 similar = "^2.3"
 global-hotkey = "0.4.0"
+markdown = "0.3.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
